fixed contrast issues

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -178,8 +178,8 @@ footer a p {
 }
 
 main h2 {
-  color: #689922;
+  color: #384c20;
   text-shadow: 1px 1px 0 #000;
-  font-size: 3vw;
+  font-size: 2vw;
   margin: 10px;
 }
